--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        
+        classpath 'com.billy.android:cc-register:1.1.1' //CC路由组件
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,11 +26,13 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-project.ext.set("minSdkVersion","21")
-project.ext.set("targetSdkVersion","28")
-project.ext.set("androidXVersion","1.0.0")
-project.ext.set("compileSdkVersion","28")
-project.ext.set("buildToolsVersion","28.0.3")
-project.ext.set("versionCode","100001")
-project.ext.set("versionName","1.0.0.01")
-project.ext.set("constraintlayoutVersion","1.1.3")
+ext{
+    minSdkVersion = 21
+    targetSdkVersion = 28
+    androidXVersion = '1.0.0'
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
+    versionCode = 100001
+    versionName = '1.0.0.01'
+    constraintlayoutVersion = '1.1.3'
+}
