--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation "q.rorbin:badgeview:$rootProject.androidXVersion"
     addComponent 'news'//会默认添加依赖 ：project（":news"）
     addComponent 'usercenter'
+    addComponent 'library_vote'
 }
